--- a/NodeJs/package.json
+++ b/NodeJs/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "NodeJs",
+  "name": "nodejs",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
+  "scripts": { 
+    "dev": "nodemon index.js"
   }
 }
